# bsuir-university-assistant

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  requirements.txt
api-gateway/: Dockerfile  requirements.txt
auth-service/: README.md  docker-compose-dev.yaml  main.py  requirements.txt
auth-service/auth_app/: main.py
auth-service/auth_app/core/: settings.py
auth-service/auth_app/models/: user.py
auth-service/auth_app/schemas/: __init__.py  user.py
auth-service/auth_app/utils/: __init__.py
auth-service/core/: settings.py
auth-service/schemas/: token.py
auth-service/utils/: __init__.py  secure.py
auth_app/: database.py  main.py  oauth2.py
auth_app/core/: __init__.py  settings.py
auth_app/models/: pass.py
auth_app/schemas/: __init__.py
chat-manager/: requirements.txt
frontend/: main.py
rag-agent/: Dockerfile  main.py  pyproject.toml  requirements.txt  settings.py
rag-agent/data/: text.txt
rag-agent/embedings/: __init__.py  batched_texts.py  embedding_providers.py
rag-agent/llms/: chatgpt_client.py  llm_client.py
rag-agent/pipeline/: dependencies.py  memory.py  pipeline.py
